force-app/main/default/objects/Model__c/Model__c.object-meta.xml
<CustomObject>
    <label>Model</label>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>