force-app/main/default/objects/Model__c/fields/Model_Description__c.field-meta.xml
<CustomField>
    <fullName>Model_Description__c</fullName>
    <label>Model Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>