force-app/main/default/objects/Model__c/fields/Vehicle_Size__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Size__c</fullName>
    <label>Vehicle Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Size</valueSetName>
    </valueSet>
</CustomField>