force-app/main/default/objects/Model__c/listViews/Models_from_DWH.listView-meta.xml
<ListView>
    <fullName>Models_from_DWH</fullName>
    <columns>NAME</columns>
    <columns>Model_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <columns>Model_Display_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>DWH</value>
    </filters>
    <filters>
        <field>Model_Description__c</field>
        <operation>contains</operation>
        <value>space</value>
    </filters>
    <label>Models from DWH</label>
</ListView>